compilateurMinCaml/tests/typechecking/invalid/fonctionRenvoyantElleMeme.ml
let rec f x = f in ()